# simple-rag

./: .gitignore  README.md  pyproject.toml
src/easy_cs/: __init__.py  qa_engine.py
src/simple_rag/: api.py  config.py  document_store.py  main.py  qa_engine.py
tests/: base.py  test_api.py  test_document_store.py  test_qa_engine.py
