[project]
name = "simple-rag"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Milos Svana", email = "milos.svana@gmail.com" }
]
dependencies = [
    "chromadb>=0.5.5",
    "fastapi>=0.111.1",
    "openai>=1.37.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/simple_rag"]

[tool.rye.scripts]
db = {cmd = "chroma run"}
api = {cmd = "fastapi run src/simple_rag/main.py --port 5000"}
